Perma MnM Assertion failure: IsAtomic<bool>::value || NS_IsMainThread() (Non-atomic static pref 'dom.enable_performance' being accessed on background thread), at /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/StaticPrefList.h:483
Categories
(Core :: Preferences: Backend, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox66 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: baku)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: csabou [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=244028936&repo=autoland
Full log: https://queue.taskcluster.net/v1/task/RstCw6OeTrGK7rLO_SG3tg/runs/0/artifacts/public/logs/live_backing.log
22:30:04 INFO - Assertion failure: IsAtomic<bool>::value || NS_IsMainThread() (Non-atomic static pref 'dom.enable_performance' being accessed on background thread), at /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/StaticPrefList.h:483
22:30:04 INFO - #01: mac_plugin_interposing_child_OnShowCursor[/Users/cltbld/tasks/task_1556749655/build/application/Firefox NightlyDebug.app/Contents/MacOS/XUL +0x3b4e002]
22:30:04 INFO - #02: mac_plugin_interposing_child_OnShowCursor[/Users/cltbld/tasks/task_1556749655/build/application/Firefox NightlyDebug.app/Contents/MacOS/XUL +0x3b551b6]
22:30:04 INFO - #03: mac_plugin_interposing_child_OnShowCursor[/Users/cltbld/tasks/task_1556749655/build/application/Firefox NightlyDebug.app/Contents/MacOS/XUL +0x3b43f2e]
22:30:04 INFO - #04: mac_plugin_interposing_child_OnShowCursor[/Users/cltbld/tasks/task_1556749655/build/application/Firefox NightlyDebug.app/Contents/MacOS/XUL +0x3b50725]
22:30:04 INFO - #05: mac_plugin_interposing_child_OnShowCursor[/Users/cltbld/tasks/task_1556749655/build/application/Firefox NightlyDebug.app/Contents/MacOS/XUL +0x3b544e9]
22:30:04 INFO - #06: mac_plugin_interposing_child_OnShowCursor[/Users/cltbld/tasks/task_1556749655/build/application/Firefox NightlyDebug.app/Contents/MacOS/XUL +0x39b0f82]
22:30:04 INFO - #07: mac_plugin_interposing_child_OnShowCursor[/Users/cltbld/tasks/task_1556749655/build/application/Firefox NightlyDebug.app/Contents/MacOS/XUL +0x39a1f54]
22:30:04 INFO - #08: mac_plugin_interposing_child_OnShowCursor[/Users/cltbld/tasks/task_1556749655/build/application/Firefox NightlyDebug.app/Contents/MacOS/XUL +0x39a41b0]
22:30:04 INFO - #09: XRE_GetBootstrap[/Users/cltbld/tasks/task_1556749655/build/application/Firefox NightlyDebug.app/Contents/MacOS/XUL +0x5a71be7]
22:30:05 INFO - ###!!! [Parent][MessageChannel] Error: (msgtype=0x1E0071,name=PBrowser::Msg_StopIMEStateManagement) Channel error: cannot send/recv
22:30:05 INFO - ###!!! [Parent][MessageChannel] Error: (msgtype=0x1E008C,name=PBrowser::Msg_Destroy) Channel error: cannot send/recv
22:30:05 INFO - dyld: Library not loaded: @executable_path/libmozglue.dylib
22:30:05 INFO - Referenced from: /Users/cltbld/tasks/task_1556749655/build/application/Firefox NightlyDebug.app/Contents/MacOS/crashreporter.app/Contents/MacOS/minidump-analyzer
22:30:05 INFO - Reason: image not found
22:30:05 INFO - ++DOCSHELL 0x119914000 == 5 [pid = 661] [id = {880129fd-3c84-7441-9156-b2c0989a9932}]
22:30:05 INFO - ++DOMWINDOW == 9 (0x11ad45f20) [pid = 661] [serial = 10] [outer = 0x0]
22:30:05 INFO - ++DOMWINDOW == 10 (0x11ad65000) [pid = 661] [serial = 11] [outer = 0x11ad45f20]
22:30:05 INFO - 1556749805257 Marionette TRACE [10] Frame script loaded
22:30:05 INFO - 1556749805258 Marionette TRACE [10] Frame script registered
22:30:05 INFO - A content process crashed and MOZ_CRASHREPORTER_SHUTDOWN is set, shutting down
22:30:05 INFO - 1556749805473 Marionette DEBUG 4 -> [0,4,"WebDriver:FindElement",{"using":"tag name","value":"html"}]
22:30:05 INFO - ++DOMWINDOW == 11 (0x119b26c00) [pid = 661] [serial = 12] [outer = 0x11ad45f20]
22:30:05 INFO - 1556749805609 Marionette TRACE Received DOM event unload for [object XULDocument]
22:30:05 INFO - 1556749805642 Marionette TRACE Received observer notification message-manager-disconnect
22:30:05 INFO - 1556749805644 Marionette DEBUG 4 <- [1,4,null,{"value":null}]
22:30:05 INFO - [Child 665, Main Thread] WARNING: nsAppShell::Exit() called redundantly: file /builds/worker/workspace/build/src/widget/cocoa/nsAppShell.mm, line 725
22:30:05 INFO - 1556749805680 Marionette DEBUG 4 -> [0,5,"WebDriver:DeleteSession",{}]
22:30:05 INFO - [Parent 661, Main Thread] WARNING: cannot post event if not initialized: file /builds/worker/workspace/build/src/netwerk/protocol/http/nsHttpConnectionMgr.cpp, line 278
22:30:05 INFO - [Parent 661, Main Thread] WARNING: cannot post event if not initialized: file /builds/worker/workspace/build/src/netwerk/protocol/http/nsHttpConnectionMgr.cpp, line 278
22:30:05 INFO - 1556749805706 Marionette DEBUG 4 <- [1,5,null,{"value":null}]
22:30:05 INFO - 1556749805711 Marionette DEBUG Closed connection 4
22:30:05 INFO - --DOCSHELL 0x11acc7800 == 4 [pid = 665] [id = {c21ed13d-f1d1-2146-8e3c-837cda3bdf86}] [url = moz-extension://23da6973-69cd-fa45-a417-1395670442c5/_generated_background_page.html]
22:30:05 INFO - --DOCSHELL 0x11acc3800 == 3 [pid = 665] [id = {e56af4bb-2647-6f4a-be17-64287626cfec}] [url = moz-extension://49c2bc9e-f7b7-6340-a0ed-f3ebf27f9ee5/_generated_background_page.html]
22:30:05 INFO - --DOCSHELL 0x11acc5800 == 2 [pid = 665] [id = {9c49a0ea-1e75-db4b-bf54-27bfffe21415}] [url = moz-extension://c967d7cb-5eec-f74d-b6d6-97cbb0553445/_generated_background_page.html]
22:30:05 INFO - --DOCSHELL 0x11acca000 == 1 [pid = 665] [id = {0cbded47-93ec-c44c-b5f8-bef019f579f4}] [url = moz-extension://e6c38cf5-a8c3-9f46-b3bf-d14c330012e4/_generated_background_page.html]
22:30:05 INFO - --DOCSHELL 0x11acc1000 == 0 [pid = 665] [id = {7a3951dd-d0e6-994f-9505-6ee377f329d4}] [url = moz-extension://26b86d30-bec8-6b43-9003-faf8aaec0407/_generated_background_page.html]
22:30:05 INFO - --DOMWINDOW == 9 (0x121a363e0) [pid = 665] [serial = 2] [outer = 0x0] [url = moz-extension://49c2bc9e-f7b7-6340-a0ed-f3ebf27f9ee5/_generated_background_page.html]
22:30:05 INFO - --DOMWINDOW == 8 (0x121a367a0) [pid = 665] [serial = 4] [outer = 0x0] [url = moz-extension://23da6973-69cd-fa45-a417-1395670442c5/_generated_background_page.html]
22:30:05 INFO - --DOMWINDOW == 7 (0x121a365c0) [pid = 665] [serial = 3] [outer = 0x0] [url = moz-extension://c967d7cb-5eec-f74d-b6d6-97cbb0553445/_generated_background_page.html]
22:30:05 INFO - --DOMWINDOW == 6 (0x121a36980) [pid = 665] [serial = 5] [outer = 0x0] [url = moz-extension://e6c38cf5-a8c3-9f46-b3bf-d14c330012e4/_generated_background_page.html]
22:30:05 INFO - --DOMWINDOW == 5 (0x121a36020) [pid = 665] [serial = 1] [outer = 0x0] [url = moz-extension://26b86d30-bec8-6b43-9003-faf8aaec0407/_generated_background_page.html]
22:30:05 INFO - --DOMWINDOW == 4 (0x121a9ec00) [pid = 665] [serial = 11] [outer = 0x0] [url = moz-extension://26b86d30-bec8-6b43-9003-faf8aaec0407/_generated_background_page.html]
22:30:05 INFO - --DOMWINDOW == 3 (0x1223e2000) [pid = 665] [serial = 15] [outer = 0x0] [url = moz-extension://e6c38cf5-a8c3-9f46-b3bf-d14c330012e4/_generated_background_page.html]
22:30:05 INFO - --DOMWINDOW == 2 (0x121aa1400) [pid = 665] [serial = 13] [outer = 0x0] [url = moz-extension://c967d7cb-5eec-f74d-b6d6-97cbb0553445/_generated_background_page.html]
22:30:05 INFO - --DOMWINDOW == 1 (0x1223dfc00) [pid = 665] [serial = 14] [outer = 0x0] [url = moz-extension://23da6973-69cd-fa45-a417-1395670442c5/_generated_background_page.html]
22:30:05 INFO - --DOMWINDOW == 0 (0x121aa0000) [pid = 665] [serial = 12] [outer = 0x0] [url = moz-extension://49c2bc9e-f7b7-6340-a0ed-f3ebf27f9ee5/_generated_background_page.html]
22:30:05 INFO - nsStringStats
22:30:05 INFO - => mAllocCount: 14201
22:30:05 INFO - => mReallocCount: 0
22:30:05 INFO - => mFreeCount: 14201
22:30:05 INFO - => mShareCount: 9577
22:30:05 INFO - => mAdoptCount: 582
22:30:05 INFO - => mAdoptFreeCount: 614
22:30:05 INFO - => Process ID: 665, Thread ID: 140735291945728
22:30:06 INFO - [Child 667, Main Thread] WARNING: nsAppShell::Exit() called redundantly: file /builds/worker/workspace/build/src/widget/cocoa/nsAppShell.mm, line 725
22:30:06 INFO - ###!!! [Parent][RunMessage] Error: Channel closing: too late to send/recv, messages will be lost
22:30:06 INFO - nsStringStats
22:30:06 INFO - => mAllocCount: 5434
22:30:06 INFO - => mReallocCount: 0
22:30:06 INFO - => mFreeCount: 5434
22:30:06 INFO - => mShareCount: 4165
22:30:06 INFO - => mAdoptCount: 69
22:30:06 INFO - => mAdoptFreeCount: 69
22:30:06 INFO - => Process ID: 667, Thread ID: 140735291945728
22:30:06 INFO - [Parent 661, StreamTrans #4] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/modules/libjar/nsJARChannel.cpp, line 371
22:30:06 INFO - [Parent 661, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80520012: file /builds/worker/workspace/build/src/modules/libjar/nsJARChannel.cpp, line 994
22:30:06 INFO - JavaScript error: resource://gre/modules/JSONFile.jsm, line 159: Error: Data is not ready.
22:30:06 INFO - [Parent 661, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111: file /builds/worker/workspace/build/src/toolkit/components/places/History.cpp, line 411
22:30:06 INFO - [Parent 661, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111: file /builds/worker/workspace/build/src/toolkit/components/places/History.cpp, line 411
22:30:06 INFO - [Parent 661, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111: file /builds/worker/workspace/build/src/toolkit/components/places/History.cpp, line 411
22:30:06 INFO - --DOCSHELL 0x125045000 == 4 [pid = 661] [id = {75f8f0e0-7775-3243-ac1e-dc26139ff37c}] [url = chrome://browser/content/hiddenWindow.xul]
22:30:06 INFO - --DOCSHELL 0x12df14000 == 3 [pid = 661] [id = {fd8aae3a-3d1c-4c41-86f3-0fe813f92b5f}] [url = chrome://extensions/content/dummy.xul]
22:30:06 INFO - --DOCSHELL 0x12cd82800 == 2 [pid = 661] [id = {2edbd498-97f0-4841-83a6-9244b1892b37}] [url = about:blank]
22:30:06 INFO - --DOCSHELL 0x12c396000 == 1 [pid = 661] [id = {5a3e104d-308c-ed41-8c83-467f90436bdf}] [url = chrome://browser/content/browser.xul]
22:30:06 INFO - 1556749806499 Marionette TRACE Received observer notification xpcom-will-shutdown
22:30:06 INFO - 1556749806500 Marionette INFO Stopped listening on port 2828
22:30:06 INFO - 1556749806501 Marionette DEBUG Remote service is inactive
22:30:06 INFO - [Parent 661, Main Thread] WARNING: NS_ENSURE_TRUE(mDB) failed: file /builds/worker/workspace/build/src/netwerk/cache/nsDiskCacheDeviceSQL.cpp, line 1285
22:30:06 INFO - [Parent 661, Main Thread] WARNING: nsAppShell::Exit() called redundantly: file /builds/worker/workspace/build/src/widget/cocoa/nsAppShell.mm, line 725
22:30:07 INFO - --DOMWINDOW == 10 (0x124ee8000) [pid = 661] [serial = 4] [outer = 0x0] [url = about:blank]
22:30:07 INFO - --DOMWINDOW == 9 (0x124819000) [pid = 661] [serial = 2] [outer = 0x0] [url = about:blank]
22:30:07 INFO - --DOMWINDOW == 8 (0x1216892e0) [pid = 661] [serial = 3] [outer = 0x0] [url = chrome://browser/content/browser.xul]
22:30:07 INFO - --DOCSHELL 0x119914000 == 0 [pid = 661] [id = {880129fd-3c84-7441-9156-b2c0989a9932}] [url = https://www.youtube.com/watch?v=BZP1rYjoBgI]
22:30:07 INFO - --DOMWINDOW == 7 (0x11ad45f20) [pid = 661] [serial = 10] [outer = 0x0] [url = about:tabcrashed?e=tabcrashed&u=https%3A//www.youtube.com/watch%3Fv%3DBZP1rYjoBgI&c=UTF-8&f=regular&d=The%2030-Second%20Video%20-%20YouTube]
22:30:07 INFO - --DOMWINDOW == 6 (0x11ad65000) [pid = 661] [serial = 11] [outer = 0x0] [url = about:blank]
22:30:07 INFO - --DOMWINDOW == 5 (0x12db7a7a0) [pid = 661] [serial = 6] [outer = 0x0] [url = chrome://extensions/content/dummy.xul]
22:30:07 INFO - --DOMWINDOW == 4 (0x12dbe1000) [pid = 661] [serial = 8] [outer = 0x0] [url = chrome://extensions/content/dummy.xul]
22:30:07 INFO - --DOMWINDOW == 3 (0x121688b60) [pid = 661] [serial = 1] [outer = 0x0] [url = chrome://browser/content/hiddenWindow.xul]
22:30:07 INFO - --DOMWINDOW == 2 (0x12c369000) [pid = 661] [serial = 9] [outer = 0x0] [url = about:blank]
22:30:07 INFO - --DOMWINDOW == 1 (0x121689c40) [pid = 661] [serial = 5] [outer = 0x0] [url = about:blank]
22:30:07 INFO - --DOMWINDOW == 0 (0x119b26c00) [pid = 661] [serial = 12] [outer = 0x0] [url = about:tabcrashed?e=tabcrashed&u=https%3A//www.youtube.com/watch%3Fv%3DBZP1rYjoBgI&c=UTF-8&f=regular&d=The%2030-Second%20Video%20-%20YouTube]
22:30:07 INFO - nsStringStats
22:30:07 INFO - => mAllocCount: 123364
22:30:07 INFO - => mReallocCount: 0
22:30:07 INFO - => mFreeCount: 123364
22:30:07 INFO - => mShareCount: 114107
22:30:07 INFO - => mAdoptCount: 3054
22:30:07 INFO - => mAdoptFreeCount: 3160
22:30:07 INFO - => Process ID: 661, Thread ID: 140735291945728
22:30:07 INFO - mozcrash Copy/paste: /Users/cltbld/tasks/task_1556749655/build/macosx64-minidump_stackwalk /var/folders/s0/q_gqp09x7gbbbc2tgkqwwpp000000x/T/tmp41lkfH.mozrunner/minidumps/0174607B-EBC2-43F1-B74C-E356B9DC4570.dmp /Users/cltbld/tasks/task_1556749655/build/symbols
22:30:15 INFO - mozcrash Saved minidump as /Users/cltbld/tasks/task_1556749655/build/blobber_upload_dir/0174607B-EBC2-43F1-B74C-E356B9DC4570.dmp
22:30:15 INFO - mozcrash Saved app info as /Users/cltbld/tasks/task_1556749655/build/blobber_upload_dir/0174607B-EBC2-43F1-B74C-E356B9DC4570.extra
22:30:15 INFO - PROCESS-CRASH | dom/media/test/marionette/test_youtube.py YoutubeTest.test_stream_480p | application crashed [@ mozilla::dom::PerformanceTimingData::RedirectStartHighRes(mozilla::dom::Performance*)]
Comment 1•6 years ago
|
||
| Assignee | ||
Comment 2•6 years ago
|
||
Interesting! This is actually an existing bug, because nsContentUtils was not exposed something thread-safe.
I can provide a fix quickly.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 3•6 years ago
|
||
Comment 5•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Updated•4 years ago
|
Description
•