Bug 1548402 - dom.enable_performance pref must be thread-safe, r=Ehsan

Differential Revision: https://phabricator.services.mozilla.com/D29583